fix endless loop

do not go into infinite loop in "save diff"

BUG:238297